<resources>
    <string name="app_name">lista1-2a</string>
    <string name="math_master">MATH MASTER</string>
    <string name="instruction">Podaj właściwy operator, aby równanie było poprawne</string>
    <string name="equation">TextView</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multi">*</string>
    <string name="points">TextView</string>
    <string name="restart">RESTART</string>
    <string name="new_eq">NOWE</string>
</resources>