<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/math_master"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/game_description"
        android:layout_width="363dp"
        android:layout_height="69dp"
        android:ems="10"
        android:gravity="center|center_horizontal|top"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:text="@string/instruction"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/equation"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="plus"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equation"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="minus"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/equation"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multi"
        android:text="@string/multi"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equation"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/points"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/points"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/game_title"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="restart"
        android:text="@string/restart"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/game_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nwe_eq"
        android:text="@string/new_eq"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/game_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />
</androidx.constraintlayout.widget.ConstraintLayout>